2008-02-09  Tony Abou-Assaleh <taa@acm.org>

	* src/dfa.c: Replace a MALLOC and for loop with a CALLOC.  Thanks to
	  Johan Walles for this. Patch #6288

	* README-alpha: more info about CVS code
	* README: pointer to README-alpha

	* src/grep.c: Update grep copyright year

2008-02-08  Reuben Thomas <rrt@sc3d.org> (tiny change)

	* .cvsignore: add configure.ac
	* src/.cvsignore: add .deps

2008-02-06  Tony Abou-Assaleh <taa@acm.org>

	* tests/foad1.sh: Comment out cases that are known to fail. These
      should be uncommented after the 2.5.4 release.
	* tests/yesno.sh: Likewise.
	* doc/grep.1: Update description of -e PATTERN; from Benno Schulenberg
	* doc/grep.texi: Likewise.

2007-11-19  Tony Abou-Assaleh <taa@acm.org>

	* m4/Makefile.am: Remove reference strerror_r.m4

2007-11-16  Tony Abou-Assaleh <taa@acm.org>

	* po/sk.po: updated from the translation project

2007-11-03  Tony Abou-Assaleh <taa@acm.org>

	* po/*.po: get latest translations
	* po/no.po: removed
	* po/ky.po: added
	* po/sk.po: added

2007-10-10  Tony Abou-Assaleh <taa@acm.org>

	* configure.ac.in: update version to 2.6-dev

	* src/grep.c: update --version message

2007-10-07  Tony Abou-Assaleh <taa@acm.org>

	* src/grep.c: When -h and -H are combined, use the last specified,
	  Bug #15620, Patch #4866
	* tests/foad1.sh: add tests for -h and -H

	* ChangeLog: Add a copyright notice (years taken from commit logs),
	  add a license notice (taken from gnulib ChangeLog)

	* TODO: update the link to a list of other grep implementations

2007-06-29  Bernhard Rosenkraenzer <bero@arklinux.org>

	* all files: GPLv3
	* configure.ac.in: Change version number

2006-11-25  Bernhard Rosenkraenzer <bero@arklinux.org>

	* configure.ac.in: Update version number for post-2.5.2 development

2006-11-25  Bernhard Rosenkraenzer <bero@arklinux.org>

	* configure.ac.in, grep.spec: Update version number

	* Makefile.cvs: Update to work with current autoconf scripts
